[package]
name = "sol_streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.5"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["rt-multi-thread", "macros"] }
bytes = "1.4.0"
solana-sdk = "2.0.14"
bincode = "1.3.3"
base64 = "0.22.1"
hex = "0.4.3"
regex = "1.11.1"
